# Suduko

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Code demo.pptx  LICENSE  README.md  main.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
SudokuSolver_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
SudokuSolver_autogen/6YEA5652QU/: moc_mainwindow.cpp.d  moc_sudokugrid.cpp.d
include/: mainwindow.h  solver.h  sudokugrid.h
src/: mainwindow.cpp  sudokugrid.cpp
